--- a/connect.html
+++ b/connect.html
@@ -2,14 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
-    <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
-    <script src="
-    https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.24.0/babel.js
-    "></script>
-    <script src="javascript/connect.js"></script>
+    <script src="react.production.min.js"></script>
+    <script src="react-dom.production.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
+    <script src="connect.js"></script>
   </body>
 </html>
